feat: add migrations, auth module, user resolver;